force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this configuration is currently active</description>
    <inlineHelpText>Indicates if this configuration is currently active</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>