force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/LogRequest__c.field-meta.xml
<CustomField>
    <fullName>LogRequest__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to determine whether or not to log the request</description>
    <label>Log Request</label>
    <type>Checkbox</type>
</CustomField>