force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/LogResponse__c.field-meta.xml
<CustomField>
    <fullName>LogResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine whether or not to log the response</description>
    <label>Log Response</label>
    <type>Checkbox</type>
</CustomField>