force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of retry attempts if RetryOnFailure__c is true</description>
    <inlineHelpText>Maximum number of retry attempts if RetryOnFailure__c is true</inlineHelpText>
    <label>MaxRetries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>