force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/RetryDelay__c.field-meta.xml
<CustomField>
    <fullName>RetryDelay__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Delay in milliseconds between retry attempts</description>
    <inlineHelpText>Delay in milliseconds between retry attempts</inlineHelpText>
    <label>RetryDelay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>