force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/RetryOnFailure__c.field-meta.xml
<CustomField>
    <fullName>RetryOnFailure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to retry the callout on failure</description>
    <inlineHelpText>Whether to retry the callout on failure</inlineHelpText>
    <label>RetryOnFailure</label>
    <type>Checkbox</type>
</CustomField>