force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/SuccessCodes__c.field-meta.xml
<CustomField>
    <fullName>SuccessCodes__c</fullName>
    <defaultValue>&quot;200,201&quot;</defaultValue>
    <description>Comma-separated list of HTTP status codes that indicate a successful callout (e.g., &quot;200,201,202&quot;). If not specified, default success codes (200-299) will be used.</description>
    <inlineHelpText>Enter comma-separated HTTP status codes that indicate success (e.g., &quot;200,201,202&quot; or &quot;200,201,202,204&quot;). If left blank, any status code between 200-299 will be considered successful.</inlineHelpText>
    <label>Success Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>