force-app/main/default/objects/HTTPCalloutConfiguration__mdt/validationRules/RetryDelayLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>RetryDelayLimit</fullName>
    <active>true</active>
    <description>Retry delay cannot be greater than 10000</description>
    <errorConditionFormula>RetryDelay__c &gt; 10000</errorConditionFormula>
    <errorMessage>Maximum retry delay you can specify is 10000 milliseconds</errorMessage>
</ValidationRule>